--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 HDRI_Epic_Courtyard_Daylight.uasset filter=lfs diff=lfs merge=lfs -text
 ShootGame-WindowsNoEditor.pak filter=lfs diff=lfs merge=lfs -text
+*.exe filter=lfs diff=lfs merge=lfs -text
